<resources>
    <string name="app_name">Checkpoint</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="fill_work_in">09:00</string>
    <string name="fill_lunch_in">12:00</string>
    <string name="fill_lunch_out">13:00</string>
    <string name="fill_work_out">18:00</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="fill_name">Android Studio</string>
    <string name="fill_email">android.studio@android.com</string>
    <string name="title_edit">Edit</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="profile_picture">Profile picture</string>
</resources>
