<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/checkpoint_today_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/today"
                android:textSize="@dimen/text_today_date" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/checkpoint_today_day_of_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/today"
                android:textSize="@dimen/text_today_date_of_week" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="24dp"
                android:background="@color/accent" />

            <com.fbvictorhugo.checkpoint.ui.components.HourTextView
                android:id="@+id/checkpoint_work_in"
                style="@style/SingleCheckpoint"
                android:drawableStart="@drawable/ic_work"
                app:htv_prediction="@string/fill_work_in" />

            <com.fbvictorhugo.checkpoint.ui.components.HourTextView
                android:id="@+id/checkpoint_lunch_in"
                style="@style/SingleCheckpoint"
                android:drawableStart="@drawable/ic_local_lunch"
                app:htv_prediction="@string/fill_lunch_in" />

            <com.fbvictorhugo.checkpoint.ui.components.HourTextView
                android:id="@+id/checkpoint_lunch_out"
                style="@style/SingleCheckpoint"
                android:drawableStart="@drawable/ic_seat"
                app:htv_prediction="@string/fill_lunch_out" />

            <com.fbvictorhugo.checkpoint.ui.components.HourTextView
                android:id="@+id/checkpoint_work_out"
                style="@style/SingleCheckpoint"
                android:drawableStart="@drawable/ic_home"
                app:htv_prediction="@string/fill_work_out" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/checkpoint_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp" />
</FrameLayout>
